--- a/.github/workflows/tf-destroy-main.yml
+++ b/.github/workflows/tf-destroy-main.yml
@@ -9,7 +9,7 @@ on:
         options: 
         - module-1
         - module-2
-        required: true
+        required: false
 
 permissions: write-all
 
